// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logic Page should render 1`] = `
<EditorLayout
  design={true}
  logic={true}
  mainCanvasMaxWidth="80em"
  page={
    Object {
      "displayName": "My first displayname",
      "id": "1",
      "page": Object {
        "answers": Array [],
        "displayName": "My question",
        "id": "1",
      },
      "title": "My first title",
    }
  }
  preview={true}
  singleColumnLayout={true}
  title="My first displayname"
>
  <Redirect
    to="/q/1/page/1/design"
  />
</EditorLayout>
`;

exports[`Logic Page should render an error when there is no data 1`] = `
<EditorLayout
  design={true}
  logic={true}
  mainCanvasMaxWidth="80em"
  page=""
  preview={true}
  singleColumnLayout={true}
  title=""
>
  <Error>
    Something went wrong
  </Error>
</EditorLayout>
`;

exports[`Logic Page should show error info when there is an error 1`] = `
<EditorLayout
  design={true}
  logic={true}
  mainCanvasMaxWidth="80em"
  page={
    Object {
      "displayName": "My first displayname",
      "id": "1",
      "page": Object {
        "answers": Array [],
        "displayName": "My question",
        "id": "1",
      },
      "title": "My first title",
    }
  }
  preview={true}
  singleColumnLayout={true}
  title="My first displayname"
>
  <Error>
    Something went wrong
  </Error>
</EditorLayout>
`;

exports[`Logic Page should show loading info when loading 1`] = `
<EditorLayout
  design={true}
  logic={true}
  mainCanvasMaxWidth="80em"
  page={
    Object {
      "displayName": "My first displayname",
      "id": "1",
      "page": Object {
        "answers": Array [],
        "displayName": "My question",
        "id": "1",
      },
      "title": "My first title",
    }
  }
  preview={true}
  singleColumnLayout={true}
  title="My first displayname"
>
  <Loading
    height="20em"
  >
    Loading routing
  </Loading>
</EditorLayout>
`;
